modifying the css/styles and index.html with footer codes

--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
             </div>
             <div class="container-fluid d-flex flex-row">
                 <div class="form__image1">
-                    <img src="./images/ketchup.png" alt="">
+                    <img class="" src="./images/ketchup.png" alt="">
                 </div>
-                <form action="">
+                <form class="w-sm-25" action="">
                     <div class="container form d-flex">
                         <div class="justify-1">
                             <input class="" type="text" placeholder="NAME" name="" id="">
@@ -107,11 +107,11 @@
 
         </div>
 
-        <div class="other container d-flex flex-column  container__others mb-2 pt-4">
+        <div class="other container d-flex flex-column  container__others mb-2 mt-4 pt-4">
             <div class="d-flex flex-column">
                 <div class="others__heading d-flex flex-row">
                     <div>
-                        <span class="material-icons burger">lunch_dining</span>
+                        <span class="material-icons footerburger">lunch_dining</span>
                     </div>
                     <div>
                         <h1 class="mt-4 mx-4">BURGER HOUSE</h1>
