fixed burger house

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                         <span class="material-icons burger">lunch_dining</span>
                     </div>
                     <div>
-                        <h1 class="mt-4 mx-4">BURGER HOUSE</h1>
+                        <h1 class="mt-4 mx-4">BURGER HOUSE MEETING</h1>
                     </div>
                 </div>
             </div>
