adjusting the brand in the footer

--- a/index.html
+++ b/index.html
@@ -107,14 +107,14 @@
 
         </div>
 
-        <div class="other container d-flex flex-column  container__others mb-2 pt-4">
+        <div class="other container d-flex flex-column  container__others mt-4 mb-2 pt-4">
             <div class="d-flex flex-column">
                 <div class="others__heading d-flex flex-row">
                     <div>
-                        <span class="material-icons burger">lunch_dining</span>
+                        <span class="material-icons footerburger">lunch_dining</span>
                     </div>
                     <div>
-                        <h1 class="mt-4 mx-4">BURGER HOUSE MEETING</h1>
+                        <h1 class="mt-4 mx-4">BURGER HOUSE</h1>
                     </div>
                 </div>
             </div>
