eunice finished section

--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Teko&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Teko:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Teko:wght@400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Roboto&family=Teko:wght@400;500&display=swap" rel="stylesheet">
     <!-- Icons -->
     <script src="https://kit.fontawesome.com/49c0517b17.js" crossorigin="anonymous"></script>
 
@@ -73,7 +78,19 @@
 
 
     <!-- Body Section -2 -->
-
+    <div class="mother__category">
+        <div class="firstbox__categories">
+            <div class="box1__category">
+                <h5>DISCOVER</h5>
+                <h1>UPCOMING EVENTS</h1>
+                <p>Burger lovers hurray! Get ready as a new place to eat is coming to Jabi lake Mall. WAAW Foundation burger Company is a locally owned restaurant that features world themed burgers, homemade buns and 100% certified Angus beef. Now you can buy a pack of burgers at your local supermarket and "Git-R-Done" for your eating pleasure."</p>
+               
+            </div>
+            <div class="box2__category">
+                <img src="./images/group2image.jpg" alt="burger picture">
+            </div>
+     </div>
+    </div>
 
     <!-- Footer Section -->
     <div class="container-fluid  d-flex flex-column justify-content-center">
