making changes to the paragraph in the footer and the info

--- a/index.html
+++ b/index.html
@@ -140,15 +140,15 @@
             </div>
             <div class="d-flex flex-row justify-content-around">
 
-                <div class="d-flex flex-row">
+                <div class="d-flex flex-row flex-sm-column align-items-sm-center">
                     <div class="others__paragraph">
-                        <p class="w-100 pr-4"> Since 2009, we've been serving-up seriously yummy eats, with our crave-able burgers and shareable sides earning Burger House a place among Nigerias' best restaurant lists and topping the nation's best burger lists.
+                        <p class="w-75 pr-4"> Since 2009, we've been serving-up seriously yummy eats, with our crave-able burgers and shareable sides earning Burger House a place among Nigerias' best restaurant lists and topping the nation's best burger lists.
                             <!-- Burger-fied Abuja, Nigeria, and Lagos, expanding from our flagship Jabi restaurant. In early 2017, we opened our first international location. In 2021 WAAW launched Burger House Unboxed to further support the evolving preferences
                             of our customers such as food halls, ghost kitchens and mobile delivery. Burger House will continue its expansion.</p> -->
                         </p>
 
                     </div>
-                    <div class="d-flex flex-column">
+                    <div class="d-flex flex-column w-100">
                         <div class="d-flex flex-row">
                             <div>
                                 <i class="fas fa-map-marker-alt"></i>
