Adding responsiveness for info section added-flex-md-column

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             </div>
             <div class="d-flex flex-row justify-content-around">
 
-                <div class="d-flex flex-row flex-sm-column align-items-sm-center">
+                <div class="d-flex flex-md-row flex-sm-column align-items-sm-center">
                     <div class="others__paragraph">
                         <p class="w-75 pr-4"> Since 2009, we've been serving-up seriously yummy eats, with our crave-able burgers and shareable sides earning Burger House a place among Nigerias' best restaurant lists and topping the nation's best burger lists.
                             <!-- Burger-fied Abuja, Nigeria, and Lagos, expanding from our flagship Jabi restaurant. In early 2017, we opened our first international location. In 2021 WAAW launched Burger House Unboxed to further support the evolving preferences
