updated work of my part

--- a/index.html
+++ b/index.html
@@ -75,7 +75,88 @@
 
 
     <!-- Body Section -1 -->
+    <section>
+        <div class="container">
+            <div class="container__first">
+                <img src="./images/image-1.jpg" alt="fresh hamburger">
+                    <div class="text-1">TRY IT TODAY</div>
+                    <div class="text-2">MOST POPULAR BURGER</div>
+            </div>
 
+            <div class="sub-container">
+                <div class="container__second">
+                    <img src="./images/image-2.jpg" alt="fresh hamburger">
+                        <div class="text-3">TRY IT TODAY</div>
+                        <div class="text-4">MORE FUN</div>
+                        <div class="text-5">MORE TASTE</div>
+                </div>
+                <div class="container__third">
+                    <img src="./images/image-3.jpg" alt="fresh hamburger">
+                        <div class="text-6">TRY IT TODAY</div>
+                        <div class="text-7">FRESH & CHILI</div>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="container-two">
+             <div class="tasty">
+                <div class="tasty-one">ALWAYS TASTY BURGER</div>
+             </div>
+         </div>
+
+
+         <div class="header">
+             <h1 class="header-h">
+                 <b>CHOOSE & ENJOY</b>
+             </h1>
+             <div class="letter">
+                 <p>
+                    Whether you are on a first date, greeting u with the first burgergdsgdgdgherhgerghbgreeegethethethehaerhaerherheretherreeerhneetherereretherhrtjfyjryng
+                </p>
+
+             </div>
+
+         </div>
+
+        </div>
+
+        <div class="hamburger">
+            <main class="grid">
+                <article>
+                    <img src="./images/image-4 .png" alt="ghost hamburger">
+                    <div class="text">
+                        <h3>GHOST BURGER</h3>
+                        <p>This burger norishes you and makes you want to jump up and just classify and pull and push</p>
+                        <button>ORDER NOW</button>
+                    </div>
+                </article>
+
+
+                <article>
+                    <img src="./images/image-5.png" alt="ghost hamburger">
+                    <div class="text">
+                        <h3>FLEX BURGER</h3>
+                        <p>This burger norishes you and makes you want to jump up and just classify and pull and push</p>
+                        <button>ORDER NOW</button>
+                    </div>
+                </article>
+
+                <article>
+                    <img src="./images/image-7.png" alt="ghost hamburger">
+                    <div class="text">
+                        <h3>WAAW BURGER</h3>
+                        <p>This burger norishes you and makes you want to jump up and just classify and pull and push</p>
+                        <button>ORDER NOW</button>
+                    </div>
+                </article>
+            </main>
+        </div>
+
+
+
+
+    </section>
 
     <!-- Body Section -2 -->
     <div class="mother__category">
