adjusting the footer section to be responsive

--- a/index.html
+++ b/index.html
@@ -79,45 +79,45 @@
         <div class="container">
             <div class="container__first">
                 <img src="./images/image-1.jpg" alt="fresh hamburger">
-                    <div class="text-1">TRY IT TODAY</div>
-                    <div class="text-2">MOST POPULAR BURGER</div>
+                <div class="text-1">TRY IT TODAY</div>
+                <div class="text-2">MOST POPULAR BURGER</div>
             </div>
 
             <div class="sub-container">
                 <div class="container__second">
                     <img src="./images/image-2.jpg" alt="fresh hamburger">
-                        <div class="text-3">TRY IT TODAY</div>
-                        <div class="text-4">MORE FUN</div>
-                        <div class="text-5">MORE TASTE</div>
+                    <div class="text-3">TRY IT TODAY</div>
+                    <div class="text-4">MORE FUN</div>
+                    <div class="text-5">MORE TASTE</div>
                 </div>
                 <div class="container__third">
                     <img src="./images/image-3.jpg" alt="fresh hamburger">
-                        <div class="text-6">TRY IT TODAY</div>
-                        <div class="text-7">FRESH & CHILI</div>
+                    <div class="text-6">TRY IT TODAY</div>
+                    <div class="text-7">FRESH & CHILI</div>
                 </div>
             </div>
 
         </div>
 
         <div class="container-two">
-             <div class="tasty">
+            <div class="tasty">
                 <div class="tasty-one">ALWAYS TASTY BURGER</div>
-             </div>
-         </div>
+            </div>
+        </div>
 
 
-         <div class="header">
-             <h1 class="header-h">
-                 <b>CHOOSE & ENJOY</b>
-             </h1>
-             <div class="letter">
-                 <p>
+        <div class="header">
+            <h1 class="header-h">
+                <b>CHOOSE & ENJOY</b>
+            </h1>
+            <div class="letter">
+                <p>
                     Whether you are on a first date, greeting u with the first burgergdsgdgdgherhgerghbgreeegethethethehaerhaerherheretherreeerhneetherereretherhrtjfyjryng
                 </p>
 
-             </div>
+            </div>
 
-         </div>
+        </div>
 
         </div>
 
@@ -221,7 +221,7 @@
             </div>
             <div class="d-flex flex-row justify-content-around">
 
-                <div class="d-flex flex-md-row flex-sm-column align-items-sm-center">
+                <div class="d-flex">
                     <div class="others__paragraph">
                         <p class="w-75 pr-4"> Since 2009, we've been serving-up seriously yummy eats, with our crave-able burgers and shareable sides earning Burger House a place among Nigerias' best restaurant lists and topping the nation's best burger lists.
                             <!-- Burger-fied Abuja, Nigeria, and Lagos, expanding from our flagship Jabi restaurant. In early 2017, we opened our first international location. In 2021 WAAW launched Burger House Unboxed to further support the evolving preferences
