Added scroll effect and responsiveness

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 <body>
     <!-- Header Section -->
-    <header>
+    <header id="home">
         <div class="header__block">
             <div class="header__container">
                 <div class="left-nav">
@@ -47,9 +47,9 @@
             </div>
             <div class="navigation__container">
                 <ul class="navigation">
-                    <li><a href="#">HOME</a></li>
-                    <li><a href="">MENU</a></li>
-                    <li><a href="">OUR STORY</a></li>
+                    <li><a href="#home">HOME</a></li>
+                    <li><a href="#menu">MENU</a></li>
+                    <li><a href="#story">OUR STORY</a></li>
                     <li><a href="#footer">CONTACT US</a></li>
                 </ul>
             </div>
@@ -121,7 +121,7 @@
 
         </div>
 
-        <div class="hamburger">
+        <div class="hamburger" id="menu">
             <main class="grid">
                 <article>
                     <img src="./images/image-4 .png" alt="ghost hamburger">
@@ -159,7 +159,7 @@
     </section>
 
     <!-- Body Section -2 -->
-    <div class="mother__category">
+    <div class="mother__category" id="story">
         <div class="firstbox__categories">
             <div class="box1__category">
                 <h5>DISCOVER</h5>
