Final Changes to site

--- a/index.html
+++ b/index.html
@@ -99,21 +99,22 @@
 
         </div>
 
-        <div class="container-two">
+        
             <div class="tasty">
-                <div class="tasty-one">ALWAYS TASTY BURGER</div>
+                <button class="tasty-one">ALWAYS TASTY BURGER</button>
             </div>
-        </div>
+
 
 
         <div class="header">
-            <h1 class="header-h">
-                <b>CHOOSE & ENJOY</b>
-            </h1>
+            <h3 class="header-h">
+                CHOOSE & ENJOY
+            </h3>
             <div class="letter">
                 <p>
-                    Whether you are on a first date, greeting u with the first burgergdsgdgdgherhgerghbgreeegethethethehaerhaerherheretherreeerhneetherereretherhrtjfyjryng
-                </p>
+                    Whether you are on a first date, greeting you with great burger recipes from our side, you are guaranteed to<br> enjoy what  we have to offer .
+                    Whether you are on a first date, greeting you with great burger recipes from our side, you are guaranteed to enjoy what  we have to offer .
+               </p>
 
             </div>
 
@@ -223,7 +224,7 @@
 
                 <div class="d-flex">
                     <div class="others__paragraph">
-                        <p class="w-75 pr-4"> Since 2009, we've been serving-up seriously yummy eats, with our crave-able burgers and shareable sides earning Burger House a place among Nigerias' best restaurant lists and topping the nation's best burger lists.
+                        <p class="w-75 pr-4"> Since 2009, we've been serving-up seriously yummy eats, with our crave-able burgers and shareable sides. 
                             <!-- Burger-fied Abuja, Nigeria, and Lagos, expanding from our flagship Jabi restaurant. In early 2017, we opened our first international location. In 2021 WAAW launched Burger House Unboxed to further support the evolving preferences
                             of our customers such as food halls, ghost kitchens and mobile delivery. Burger House will continue its expansion.</p> -->
                         </p>
