making the burger site footer responsive

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
         </div>
         <div class="brand-about">
             <div class="others__paragraph">
-                <p class="w-100 brand-para"> Since 2009, we've been serving-up seriously yummy eats, with our crave-able burgers and shareable sides. Burger-fied Abuja, Nigeria, and Lagos, expanding from our flagship Jabi restaurant. In early 2017, we opened our first international
+                <p class=" brand-para"> Since 2009, we've been serving-up seriously yummy eats, with our crave-able burgers and shareable sides. Burger-fied Abuja, Nigeria, and Lagos, expanding from our flagship Jabi restaurant. In early 2017, we opened our first international
                     location.
                 </p>
 
